# jarvis

./: .flake8  .gitignore  .gitmodules  .pdm-python  CLAUDE.md  Makefile  README.md  add_gmail_account.py  agent.py  agent_query.py  compose.yaml  docker-compose.yml  example-settings.yml  example.env  gmail_auth.py  index_notes.py  jarvis.py  langgraph.json  manual_oauth_validation.py  notes_query.py  pyproject.toml  requirements.txt  search_tools.py  test_agent_import.py  test_agent_query.py  test_agent_registry_simple.py  test_gmail_auth.py  test_search_tools.py  test_todoist_integration.py  vector_store.py  weekly_review_rules.md
.claude/: settings.local.json
.cursor/rules/: gmail-test.mdc
.github/workflows/: test.yml
agent-web-kit/: README.md  example.env  package-lock.json  package.json
common/: chromadb_vector_store.py  db_utils.py  get_vector_store.py  google_auth.py  milvus_vector_store.py  vector_store.py
core/: agent_query.py  nodes.py
docker/: Dockerfile.next  Dockerfile.service
docs/: journaling-configuration.md
examples/: todoist_agent.py
plugins/: tools.py
src/: index_notes.py  streamlit_app.py  streamlit_app_new.py  streamlit_app_official.py  streamlit_app_official_auth.py
tasks/: prd-journaling-agent.md  prd-weekly-review-planner.md  tasks-prd-journaling-agent.md  tasks-prd-weekly-review-planner.md
tests/: conftest.py  test_agent_query.py  test_cli_and_plugins.py  test_indexing.py  test_search_tools.py  test_todoist_plugin.py  test_todoist_server.py
utils/: load_settings.py  strToKeywords.py  vector_search_tools.py
(+79 files in other folders)
